test/domains/compilerErrors/notsupportedIndexOrder-sparse.chpl
use notsupportedCommon;

writeln(dfltRectangularSparseSub.indexOrder(0));
